# Research-Agent

./: .gitignore  README.md  pyproject.toml
config/: research-agent.example.toml  research-agent.example.yaml
docs/: architecture.md  obsidian-vault.md  openai-mvp.md  portal-integration.md  portal-runbook.md  roadmap.md
scripts/: check.py  portal_e2e_smoke.py  portal_ui_smoke.py  rerun_lineage_smoke.py
src/research_agent/: __init__.py  bilingual_audit.py  bilingual_upgrade.py  blueprint.py  blueprint_refresh.py  citations.py  cli.py  collectors.py  common_modules.py  config.py  doctor.py  (+31 more)
templates/: evidence-ledger.md  service-blueprint.md  source-note.md
tests/: test_bilingual_audit.py  test_bilingual_upgrade.py  test_blueprint.py  test_blueprint_refresh.py  test_check_script.py  test_citations.py  test_collectors.py  test_common_modules.py  test_config.py  test_doctor.py  test_evidence.py  test_gemini_client.py  test_low_priority_backlink_review.py  test_manual_orphan_review.py  test_models.py  test_next_actions.py  test_obsidian.py  test_official_docs_refresh.py  test_openai_client.py  test_paper_claim_refresh.py  test_paper_downstream.py  test_paper_refresh.py  test_pipeline.py  test_portal_api.py  test_portal_e2e_smoke.py  test_portal_job_cleanup.py  test_portal_ui_smoke.py  test_quality.py  test_render_translation.py  test_report_profiles.py  test_review_promotion.py  test_run_cleanup.py  test_source_audit.py  test_source_reference_sync.py  test_standards_refresh.py  test_textutil.py  test_vault_health.py  test_vault_index.py  test_verification_cleanup.py
